Creamos el selector de opciones

--- a/src/views/table.html
+++ b/src/views/table.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <section>
-            <div class="container">
-               <table id="table" class="table">
+            <div class="container my-5 p-5">
+               <table id="table" class="table border border-dark">
                     <thead>
                         <tr>
                             <th>Nombre</th>
